GPII-952: Add styling to the message dialog box.

--- a/src/pcp/html/PrefsEditorTemplate-PCP.html
+++ b/src/pcp/html/PrefsEditorTemplate-PCP.html
@@ -27,10 +27,8 @@
                     <input id="pcpSaveButton" class="flc-prefsEditor-save gpii-PCP-save fl-prefsEditor-save gpii-prefsEditor-save" type="button" value="save & apply"></input>
                 </span>
                 <div class="gpiic-pcp-statusMessage gpii-pcp-statusMessage">
-                    <span role="status" class="gpii-prefsEditor-messageLine gpiic-prefsEditor-messageLine"></span>
-                    <div class="gpii-prefsEditor-notificationConfirmationArea">
-                        <div class="gpii-prefsEditor-notificationConfirmButton gpiic-pcp-messageButton"></div>
-                    </div>
+                    <div role="status" class="gpii-prefsEditor-messageLine gpii-pcp-messageLine gpiic-prefsEditor-messageLine"></div><br>
+                    <div class="gpiic-pcp-messageButton gpii-pcp-messageButton gpii-prefsEditor-notificationConfirmButton "></div>
                 </div>
             </div>
         </div>
