GPII-752: Test setup + first test.

--- a/tests/html/pcpStatusMessages-Test.html
+++ b/tests/html/pcpStatusMessages-Test.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" type="text/css" href="../../src/shared/frames/css/frames.css" />
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+
+    <link rel="stylesheet" media="screen" href="../lib/qunit/qunit/css/qunit.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
@@ -92,6 +94,12 @@
 
 </head>
 <body>
+    <h1 id="qunit-header">Preferences Editors tests</h1>
+    <h2 id="qunit-banner"></h2>
+    <div id="qunit-testrunner-toolbar"></div>
+    <h2 id="qunit-userAgent"></h2>
+    <ol id="qunit-tests"></ol><br><br><br>
+
     <div id="gpiic-pcp"></div>
 </body>
 </html>
