GPII-752: Add message dialog visibility tests.

--- a/tests/html/pcpStatusMessages-Test.html
+++ b/tests/html/pcpStatusMessages-Test.html
@@ -88,6 +88,8 @@
 
     <script src="../lib/qunit/qunit/js/qunit.js"></script>
     <script src="../lib/infusion/jqUnit/js/jqUnit.js"></script>
+    <script src="../lib/infusion/jqUnit/js/jqUnit-browser.js"></script>
+
     <script src="../lib/infusion/utils/js/IoCTestUtils.js"></script>
 
     <script type="text/javascript" src="../js/pcpStatusMessagesTests.js"></script>
