GPII-947: Replacing jQuery selectors with infusion selectors.

--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -1,43 +1,43 @@
 	<div class="head">
-		<h1 class="sign-up signUpLabel"></h1>
-		<span class="sign-up-description signUpDescription1"></span>
-		<span class="sign-up-description signUpDescription2"></span>
+		<h1 class="gpiic-signup-label sign-up signUpLabel"></h1>
+		<span class="gpiic-signup-description1 sign-up-description signUpDescription1"></span>
+		<span class="gpiic-signup-description2 sign-up-description signUpDescription2"></span>
 	</div>
 	<div class="tabs">
 		<section id="tab1" class="login-tab1">
 			<h2>
 				<a href="#tab1">
 					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="icon-text loginLabel"></span>
+					<span class="gpiic-signup-loginLabel icon-text loginLabel"></span>
 				</a>
 			</h2>
-            <h3 class="login-h3 italics recommendedForSecurity"></h3>
+            <h3 class="gpiic-signup-login-recommendedForSecurity login-h3 italics recommendedForSecurity"></h3>
 			<div class="username">
 				<div class="username-header">
-					<label for="username" class="login-label usernameLabel"></label>
-					<span id="usernameAvailable" class="login-adjusterIcons"></span>
-					<span id="usernameDescription" class="username-description"></span>
+					<label for="username" class="gpiic-signup-login-usernameLabel login-label usernameLabel"></label>
+					<span class="gpiic-signup-login-usernameAvailable login-adjusterIcons"></span>
+					<span class="gpiic-signup-login-usernameDescription username-description"></span>
 				</div>
 				<span class="login-adjusterIcons login-textfield-icon"></span>
-	            <input id="username" name="username" type="text" class="textfield login-textfield">
+	            <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield textfield login-textfield">
 			</div>
 			<div class="passwd">
 				<div class="passwd-header">
-			        <label for="passwd" class="login-label passwordLabel"></label>
-					<span id="passwdStrength" class="login-adjusterIcons"></span>
-		            <span id="passwdStrengthDescription" class="passwd-description"></span>
+			        <label for="passwd" class="gpiic-signup-login-passwordLabel login-label passwordLabel"></label>
+					<span class="gpiic-signup-login-passwdStrength login-adjusterIcons"></span>
+		            <span class="gpiic-signup-login-passwdStrengthDescription passwd-description"></span>
 				</div>
 				<span class="login-adjusterIcons login-textfield-icon"></span>
-	            <input id="passwd" name="password" type="password" class="textfield login-textfield">
+	            <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield textfield login-textfield">
             </div>
 			<div class="cpasswd">
 				<div class="cpasswd-header">
-		            <label for="cpasswd" class="login-label confirmPasswordLabel"></label>
-					<span id="passwdMatch" class="login-adjusterIcons"></span>
-		            <span id="passwdMatchDescription" class="passwd-description"></span>
+		            <label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel login-label confirmPasswordLabel"></label>
+					<span class="gpiic-signup-login-passwdMatch login-adjusterIcons"></span>
+		            <span class="gpiic-signup-login-passwdMatchDescription passwd-description"></span>
 				</div>			
 				<span class="login-adjusterIcons login-textfield-icon"></span>
-    	        <input id="cpasswd" name="cpasswd" type="password" class="textfield login-textfield">
+    	        <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield textfield login-textfield">
     	    </div>
 		</section>
 		
@@ -45,7 +45,7 @@
 			<h2>
 				<a href="#tab2">
 					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="icon-text rfidLabel"></span>
+					<span class="gpiic-signup-rfidLabel icon-text rfidLabel"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 2.</p>
@@ -55,7 +55,7 @@
 			<h2>
 				<a href="#tab3">
 					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="icon-text usbLabel"></span>
+					<span class="gpiic-signup-usbLabel icon-text usbLabel"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 3.</p>
@@ -65,29 +65,29 @@
 			<h2>
 				<a href="#tab4">
 					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="icon-text qrCodeLabel"></span>
+					<span class="gpiic-signup-qrCodeLabel icon-text qrCodeLabel"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 4.</p>
 		</section>
 	</div>
 	<div class="terms">
-		<input id="termsCheckBox" type="checkbox" name="terms"/><label for="termsCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-small"></span></label><span class="acceptLabel"></span><a id="termsLink" href="#" class="termsAndConditions"></a>
+		<input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink termsAndConditions"></a>
 	</div>
 	<div class="tail">
-		<input id="cancelButton" type="button" class="cancelButton cancelButtonValue">
-		<input id="createButton" type="button" class="createAccountButton createAccountValue" disabled>
+		<input type="button" class="gpiic-signup-login-cancelButton cancelButton cancelButtonValue">
+		<input type="button" class="gpiic-signup-login-createAccountButton createAccountButton createAccountValue" disabled>
 	</div>
-	<div class="overlay"></div>
-	<div class="modal">
+	<div class="gpiic-signup-login-overlay overlay"></div>
+	<div class="gpiic-signup-login-modal modal">
 		<div class="recovery">
-			<span class="recovery-span-header selectRecoveyMethod"></span>
-			<input id="recoveyCheckBox" type="checkbox" name="terms"/><label for="recoveyCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-medium"></span></label>
-			<span class="recovery-checkbox-text recoveryID"></span>
-			<span id="recoveryDescription" class="recovery-description disabled recoveryDescription"></span>
-   	        <input id="recoveryTextfield" name="rtextfield" type="text" class="textfield recovery-textfield" disabled>
-			<input id="recoveryBackButton" type="button" class="recovery-back backValue">
-			<input id="recoveryGotIt" type="button" class="recovery-got-it gotItValue" disabled>
+			<span class="gpiic-signup-login-selectRecoveyMethod recovery-span-header selectRecoveyMethod"></span>
+			<input id="recoveryCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-recoveyCheckBox"/><label for="recoveryCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-medium"></span></label>
+			<span class="gpiic-signup-login-recoveryID recovery-checkbox-text recoveryID"></span>
+			<span class="gpiic-signup-login-recoveryDescription recovery-description disabled recoveryDescription"></span>
+   	        <input name="rtextfield" type="text" class="gpiic-signup-login-recoveryTextfield textfield recovery-textfield" disabled>
+			<input type="button" class="gpiic-signup-login-recoveryBackButton recovery-back backValue">
+			<input type="button" class="gpiic-signup-login-gotItButton recovery-got-it gotItValue" disabled>
 		</div>
 	</div>
 		
