GPII-947: Renaming CSS selectors. Incorporating Justin's solution about messages.

--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -1,93 +1,93 @@
-	<div class="head">
-		<h1 class="gpiic-signup-label sign-up signUpLabel"></h1>
-		<span class="gpiic-signup-description1 sign-up-description signUpDescription1"></span>
-		<span class="gpiic-signup-description2 sign-up-description signUpDescription2"></span>
+	<div class="gpii-signup-head">
+		<h1 class="gpiic-signup-label gpii-signup-label"></h1>
+		<span class="gpiic-signup-description1 gpii-signup-description"></span>
+		<span class="gpiic-signup-description2 gpii-signup-description"></span>
 	</div>
-	<div class="tabs">
-		<section id="tab1" class="login-tab1">
+	<div class="gpii-signup-tabs">
+		<section id="tab1" class="gpii-signup-tab1">
 			<h2>
 				<a href="#tab1">
-					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="gpiic-signup-loginLabel icon-text loginLabel"></span>
+					<span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
+					<span class="gpiic-signup-loginLabel gpii-signup-icon-text"></span>
 				</a>
 			</h2>
-            <h3 class="gpiic-signup-login-recommendedForSecurity login-h3 italics recommendedForSecurity"></h3>
-			<div class="username">
-				<div class="username-header">
-					<label for="username" class="gpiic-signup-login-usernameLabel login-label usernameLabel"></label>
-					<span class="gpiic-signup-login-usernameAvailable login-adjusterIcons"></span>
-					<span class="gpiic-signup-login-usernameDescription username-description"></span>
+            <h3 class="gpiic-signup-login-recommendedForSecurity gpii-signup-login-h3 gpii-signup-italics"></h3>
+			<div class="gpii-signup-username">
+				<div class="gpii-signup-username-header">
+					<label for="username" class="gpiic-signup-login-usernameLabel gpii-signup-login-label"></label>
+					<span class="gpiic-signup-login-usernameAvailable gpii-signup-adjusterIcons"></span>
+					<span class="gpiic-signup-login-usernameDescription gpii-signup-username-description"></span>
 				</div>
-				<span class="login-adjusterIcons login-textfield-icon"></span>
-	            <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield textfield login-textfield">
+				<span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
+	            <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield gpii-signup-textfield gpii-login-textfield">
 			</div>
-			<div class="passwd">
-				<div class="passwd-header">
-			        <label for="passwd" class="gpiic-signup-login-passwordLabel login-label passwordLabel"></label>
-					<span class="gpiic-signup-login-passwdStrength login-adjusterIcons"></span>
-		            <span class="gpiic-signup-login-passwdStrengthDescription passwd-description"></span>
+			<div class="gpii-signup-passwd">
+				<div class="gpii-signup-passwd-header">
+			        <label for="passwd" class="gpiic-signup-login-passwordLabel gpii-signup-login-label"></label>
+					<span class="gpiic-signup-login-passwdStrength gpii-signup-adjusterIcons"></span>
+		            <span class="gpiic-signup-login-passwdStrengthDescription gpii-signup-passwd-description"></span>
 				</div>
-				<span class="login-adjusterIcons login-textfield-icon"></span>
-	            <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield textfield login-textfield">
+				<span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
+	            <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield gpii-signup-textfield gpii-login-textfield">
             </div>
-			<div class="cpasswd">
-				<div class="cpasswd-header">
-		            <label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel login-label confirmPasswordLabel"></label>
-					<span class="gpiic-signup-login-passwdMatch login-adjusterIcons"></span>
-		            <span class="gpiic-signup-login-passwdMatchDescription passwd-description"></span>
+			<div class="gpii-signup-cpasswd">
+				<div class="gpii-signup-cpasswd-header">
+		            <label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel gpii-signup-login-label"></label>
+					<span class="gpiic-signup-login-passwdMatch gpii-signup-adjusterIcons"></span>
+		            <span class="gpiic-signup-login-passwdMatchDescription gpii-signup-passwd-description"></span>
 				</div>			
-				<span class="login-adjusterIcons login-textfield-icon"></span>
-    	        <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield textfield login-textfield">
+				<span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
+    	        <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield gpii-signup-textfield gpii-login-textfield">
     	    </div>
 		</section>
 		
-		<section id="tab2" class="login-tab2">
+		<section id="tab2" class="gpii-signup-tab2">
 			<h2>
 				<a href="#tab2">
-					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="gpiic-signup-rfidLabel icon-text rfidLabel"></span>
+					<span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
+					<span class="gpiic-signup-rfidLabel gpii-signup-icon-text"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 2.</p>
 		</section>
 		
-		<section id="tab3" class="login-tab3">
+		<section id="tab3" class="gpii-signup-tab3">
 			<h2>
 				<a href="#tab3">
-					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="gpiic-signup-usbLabel icon-text usbLabel"></span>
+					<span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
+					<span class="gpiic-signup-usbLabel gpii-signup-icon-text"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 3.</p>
 		</section>
 	
-		<section id="tab4" class="login-tab4">
+		<section id="tab4" class="gpii-signup-tab4">
 			<h2>
 				<a href="#tab4">
-					<span class="login-adjusterIcons login-headerImage"></span>
-					<span class="gpiic-signup-qrCodeLabel icon-text qrCodeLabel"></span>
+					<span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
+					<span class="gpiic-signup-qrCodeLabel gpii-signup-icon-text"></span>
 				</a>
 			</h2>
 			<p>This content appears on tab 4.</p>
 		</section>
 	</div>
-	<div class="terms">
-		<input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink termsAndConditions"></a>
+	<div class="gpii-signup-terms">
+		<input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
 	</div>
-	<div class="tail">
-		<input type="button" class="gpiic-signup-login-cancelButton cancelButton cancelButtonValue">
-		<input type="button" class="gpiic-signup-login-createAccountButton createAccountButton createAccountValue" disabled>
+	<div class="gpii-signup-tail">
+		<input type="button" class="gpiic-signup-login-cancelButton gpii-signup-cancelButton">
+		<input type="button" class="gpiic-signup-login-createAccountButton gpii-signup-createAccountButton" disabled>
 	</div>
-	<div class="gpiic-signup-login-overlay overlay"></div>
-	<div class="gpiic-signup-login-modal modal">
-		<div class="recovery">
-			<span class="gpiic-signup-login-selectRecoveyMethod recovery-span-header selectRecoveyMethod"></span>
-			<input id="recoveryCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-recoveyCheckBox"/><label for="recoveryCheckBox"><span class="login-adjusterIcons checkbox-icon checkbox-icon-medium"></span></label>
-			<span class="gpiic-signup-login-recoveryID recovery-checkbox-text recoveryID"></span>
-			<span class="gpiic-signup-login-recoveryDescription recovery-description disabled recoveryDescription"></span>
-   	        <input name="rtextfield" type="text" class="gpiic-signup-login-recoveryTextfield textfield recovery-textfield" disabled>
-			<input type="button" class="gpiic-signup-login-recoveryBackButton recovery-back backValue">
-			<input type="button" class="gpiic-signup-login-gotItButton recovery-got-it gotItValue" disabled>
+	<div class="gpiic-signup-login-overlay gpii-signup-overlay"></div>
+	<div class="gpiic-signup-login-modal gpii-signup-modal">
+		<div class="gpii-signup-recovery">
+			<span class="gpiic-signup-login-selectRecoveyMethod gpii-signup-recovery-span-header"></span>
+			<input id="recoveryCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-recoveyCheckBox"/><label for="recoveryCheckBox"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-medium"></span></label>
+			<span class="gpiic-signup-login-recoveryID gpii-signup-recovery-checkbox-text"></span>
+			<span class="gpiic-signup-login-recoveryDescription gpii-signup-recovery-description disabled"></span>
+   	        <input name="rtextfield" type="text" class="gpiic-signup-login-recoveryTextfield gpii-signup-textfield gpii-signup-recovery-textfield" disabled>
+			<input type="button" class="gpiic-signup-login-recoveryBackButton gpii-signup-recovery-back">
+			<input type="button" class="gpiic-signup-login-gotItButton gpii-signup-recovery-got-it" disabled>
 		</div>
 	</div>
 		
