--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -6,7 +6,7 @@
     <div class="gpii-signup-tabs">
         <section id="tab1" class="gpii-signup-tab1">
             <h2>
-                <a href="#tab1">
+                <a href="#tab1" class="gpiic-signup-loginTab">
                     <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
                     <span class="gpiic-signup-loginLabel gpii-signup-icon-text"></span>
                 </a>
@@ -14,36 +14,36 @@
             <h3 class="gpiic-signup-login-recommendedForSecurity gpii-signup-login-h3 gpii-signup-italics"></h3>
             <div class="gpii-signup-username">
                 <div class="gpii-signup-username-header">
-                    <label for="username" class="gpiic-signup-login-usernameLabel gpii-signup-login-label"></label>
+                    <h3 class="gpii-signup-login-h3-normal"><label for="username" class="gpiic-signup-login-usernameLabel gpii-signup-login-label"></label></h3>
                     <span class="gpiic-signup-login-usernameAvailable gpii-signup-adjusterIcons"></span>
                     <span class="gpiic-signup-login-usernameDescription gpii-signup-username-description"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
-                <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield gpii-signup-textfield gpii-login-textfield">
+                <input id="username" name="username" type="text" class="gpiic-signup-login-usernameTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
             </div>
             <div class="gpii-signup-passwd">
                 <div class="gpii-signup-passwd-header">
-                    <label for="passwd" class="gpiic-signup-login-passwordLabel gpii-signup-login-label"></label>
+                    <h3 class="gpii-signup-login-h3-normal"><label for="passwd" class="gpiic-signup-login-passwordLabel gpii-signup-login-label"></label></h3>
                     <span class="gpiic-signup-login-passwdStrength gpii-signup-adjusterIcons"></span>
                     <span class="gpiic-signup-login-passwdStrengthDescription gpii-signup-passwd-description"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
-                <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield gpii-signup-textfield gpii-login-textfield">
+                <input id="passwd" name="password" type="password" class="gpiic-signup-login-passwdTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
             </div>
             <div class="gpii-signup-cpasswd">
                 <div class="gpii-signup-cpasswd-header">
-                    <label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel gpii-signup-login-label"></label>
+                    <h3 class="gpii-signup-login-h3-normal"><label for="cpasswd" class="gpiic-signup-login-confirmPasswordLabel gpii-signup-login-label"></label></h3>
                     <span class="gpiic-signup-login-passwdMatch gpii-signup-adjusterIcons"></span>
                     <span class="gpiic-signup-login-passwdMatchDescription gpii-signup-passwd-description"></span>
                 </div>
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
-                <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield gpii-signup-textfield gpii-login-textfield">
+                <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
             </div>
         </section>
 
         <section id="tab2" class="gpii-signup-tab2">
             <h2>
-                <a href="#tab2">
+                <a href="#tab2" class="gpiic-signup-rfidTab">
                     <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
                     <span class="gpiic-signup-rfidLabel gpii-signup-icon-text"></span>
                 </a>
@@ -53,7 +53,7 @@
 
         <section id="tab3" class="gpii-signup-tab3">
             <h2>
-                <a href="#tab3">
+                <a href="#tab3" class="gpiic-signup-usbTab">
                     <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
                     <span class="gpiic-signup-usbLabel gpii-signup-icon-text"></span>
                 </a>
@@ -63,7 +63,7 @@
 
         <section id="tab4" class="gpii-signup-tab4">
             <h2>
-                <a href="#tab4">
+                <a href="#tab4" class="gpiic-signup-qrcodeTab">
                     <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
                     <span class="gpiic-signup-qrCodeLabel gpii-signup-icon-text"></span>
                 </a>
@@ -72,7 +72,7 @@
         </section>
     </div>
     <div class="gpii-signup-terms">
-        <input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
+        <input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox" class="gpiic-signup-termsCheckBoxLabel" role="checkbox" aria-checked="false" tabindex="0"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
     </div>
     <div class="gpii-signup-tail">
         <input type="button" class="gpiic-signup-login-cancelButton gpii-signup-cancelButton">
@@ -82,7 +82,7 @@
     <div class="gpiic-signup-login-modal gpii-signup-modal">
         <div class="gpii-signup-recovery">
             <span class="gpiic-signup-login-selectRecoveyMethod gpii-signup-recovery-span-header"></span>
-            <input id="recoveryCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-recoveyCheckBox"/><label for="recoveryCheckBox"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-medium"></span></label>
+            <input id="recoveryCheckBox" type="checkbox" name="recoveryCheck" class="gpiic-signup-login-recoveyCheckBox"/><label for="recoveryCheckBox" class="gpiic-signup-recoveryCheckBoxLabel" role="checkbox" aria-checked="false" tabindex="0"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-medium"></span></label>
             <span class="gpiic-signup-login-recoveryID gpii-signup-recovery-checkbox-text"></span>
             <span class="gpiic-signup-login-recoveryDescription gpii-signup-recovery-description disabled"></span>
             <input name="rtextfield" type="text" class="gpiic-signup-login-recoveryTextfield gpii-signup-textfield gpii-signup-recovery-textfield" disabled>
