GPII-947: Indentation issue in index file. Removing jQuery and Google references from index file.

--- a/demos/signup/index.html
+++ b/demos/signup/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Sign Up PMT</title>
-    <!-- Needed fonts from Google --> 
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+<meta charset="UTF-8">
+<title>Sign Up PMT</title>
 
-    <!-- All styling for Sign Up is here -->
-    <link rel="stylesheet" type="text/css" media="all" href="../../src/signup/css/login.css"/>
+<!-- All styling for Sign Up is here -->
+<link rel="stylesheet" type="text/css" media="all"
+	href="../../src/signup/css/login.css" />
 
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<!-- The Infusion Library -->
+<script type="text/javascript"
+	src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
 
-    <!-- The Infusion Library -->
-    <script type="text/javascript" src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
+<!-- The i18n JS files -->
+<script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
 
-    <!-- The i18n JS files -->
-    <script type="text/javascript" src="../../src/shared/i18n/js/i18n.js"></script>
+<!-- The common JS files -->
+<script type="text/javascript"
+	src="../../src/shared/common/ariaUtility.js"></script>
+<script type="text/javascript"
+	src="../../src/shared/common/eventUtility.js"></script>
+<script type="text/javascript" src="../../src/shared/common/merging.js"></script>
 
-    <!-- The common JS files -->
-    <script type="text/javascript" src="../../src/shared/common/ariaUtility.js"></script>
-    <script type="text/javascript" src="../../src/shared/common/eventUtility.js"></script>
-    <script type="text/javascript" src="../../src/shared/common/merging.js"></script>
-
-    <!-- The custom JS files -->
-    <script type="text/javascript" src="../../src/signup/js/signup.js"></script>
-    <script type="text/javascript" src="demo.js"></script>
+<!-- The custom JS files -->
+<script type="text/javascript" src="../../src/signup/js/signup.js"></script>
+<script type="text/javascript" src="demo.js"></script>
 </head>
 <body>
 
-<div class="gpii-signup-main"></div>
+	<div class="gpii-signup-main"></div>
 
-<script type="text/javascript">
-    demo.initSignUpPanel();
-</script>
+	<script type="text/javascript">
+		demo.initSignUpPanel();
+	</script>
 
 </body>
 </html>
