--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -1,17 +1,10 @@
     <div class="gpii-signup-head">
+        <span class="gpii-signup-adjusterIcons gpii-signup-icon"></span>
         <h1 class="gpiic-signup-label gpii-signup-label"></h1>
-        <span class="gpiic-signup-description1 gpii-signup-description"></span>
-        <span class="gpiic-signup-description2 gpii-signup-description"></span>
+        <span class="gpiic-signup-description gpii-signup-description"></span>
     </div>
-    <div class="gpii-signup-tabs">
-        <section id="tab1" class="gpii-signup-tab1">
-            <h2>
-                <a href="#tab1" class="gpiic-signup-loginTab">
-                    <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
-                    <span class="gpiic-signup-loginLabel gpii-signup-icon-text"></span>
-                </a>
-            </h2>
-            <h3 class="gpiic-signup-login-recommendedForSecurity gpii-signup-login-h3 gpii-signup-italics"></h3>
+    <div class="gpii-signup-form">
+        <section id="account" class="gpii-signup-account">
             <div class="gpii-signup-username">
                 <div class="gpii-signup-username-header">
                     <h3 class="gpii-signup-login-h3-normal"><label for="username" class="gpiic-signup-login-usernameLabel gpii-signup-login-label"></label></h3>
@@ -39,37 +32,10 @@
                 <span class="gpii-signup-adjusterIcons gpii-login-textfield-icon"></span>
                 <input id="cpasswd" name="cpasswd" type="password" class="gpiic-signup-login-cpasswdTextfield gpii-signup-textfield gpii-login-textfield" tabindex="0">
             </div>
+            <div class="gpii-signup-terms">
+                <input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox" class="gpiic-signup-termsCheckBoxLabel" role="checkbox" aria-checked="false" tabindex="0"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
+            </div>
         </section>
-        <section id="tab2" class="gpii-signup-tab2">
-            <h2>
-                <a href="#tab2" class="gpiic-signup-rfidTab">
-                    <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
-                    <span class="gpiic-signup-rfidLabel gpii-signup-icon-text"></span>
-                </a>
-            </h2>
-            <p>This content appears on tab 2.</p>
-        </section>
-        <section id="tab3" class="gpii-signup-tab3">
-            <h2>
-                <a href="#tab3" class="gpiic-signup-usbTab">
-                    <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
-                    <span class="gpiic-signup-usbLabel gpii-signup-icon-text"></span>
-                </a>
-            </h2>
-            <p>This content appears on tab 3.</p>
-        </section>
-        <section id="tab4" class="gpii-signup-tab4">
-            <h2>
-                <a href="#tab4" class="gpiic-signup-qrcodeTab">
-                    <span class="gpii-signup-adjusterIcons gpii-signup-headerImage"></span>
-                    <span class="gpiic-signup-qrCodeLabel gpii-signup-icon-text"></span>
-                </a>
-            </h2>
-            <p>This content appears on tab 4.</p>
-        </section>
-    </div>
-    <div class="gpii-signup-terms">
-        <input id="termsCheckBox" type="checkbox" name="terms" class="gpiic-signup-login-termsCheckBox"/><label for="termsCheckBox" class="gpiic-signup-termsCheckBoxLabel" role="checkbox" aria-checked="false" tabindex="0"><span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span></label><span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
     </div>
     <div class="gpii-signup-tail">
         <input type="button" class="gpiic-signup-login-cancelButton gpii-signup-cancelButton">
