GPII-947: Adding login link to sign up page. Renaming css and json files of sign up application.

--- a/demos/signup/index.html
+++ b/demos/signup/index.html
@@ -5,7 +5,7 @@
         <title>Sign Up PMT</title>
         
         <!-- All styling for Sign Up is here -->
-        <link rel="stylesheet" type="text/css" media="all" href="../../src/signup/css/login.css"/>
+        <link rel="stylesheet" type="text/css" media="all" href="../../src/signup/css/signup.css"/>
         
         <!-- The Infusion Library -->
         <script type="text/javascript" src="../../src/shared/lib/infusion/infusion-prefsFramework.js"></script>
