--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -2,6 +2,7 @@
         <span class="gpii-signup-adjusterIcons gpii-signup-icon"></span>
         <h1 class="gpiic-signup-label gpii-signup-label"></h1>
         <span class="gpiic-signup-description gpii-signup-description"></span>
+        <span class="gpiic-signup-loginLinkDescription gpii-signup-linkDescription gpii-signup-paddingTop-small"></span><a id="loginLink" href="#" class="gpiic-signup-loginLink gpii-signup-link gpii-signup-paddingLeft-small"></a>
     </div>
     <div class="gpii-signup-form">
         <section id="account" class="gpii-signup-account">
