GPII-947: Fixing focus for checkboxes in signup page.

--- a/src/signup/html/signupPanelTemplate.html
+++ b/src/signup/html/signupPanelTemplate.html
@@ -38,7 +38,9 @@
                 <label for="termsCheckBox" class="gpiic-signup-termsCheckBoxLabel" role="checkbox" aria-checked="false" tabindex="0">
                     <span class="gpii-signup-adjusterIcons gpii-signup-checkbox-icon gpii-signup-checkbox-icon-small"></span>
                 </label>
-                <span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
+                <div class="gpiic-signup-terms-text gpii-signup-terms-text">
+                    <span class="gpiic-signup-login-acceptLabel"></span><a id="termsLink" href="#" class="gpiic-signup-login-termsLink"></a>
+                </div>
             </div>
         </section>
     </div>
